config/envoy.yml
---
static_resources:
  listeners:
    - name: listener_chaty_grpc_server
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8091
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: chaty_grpc_raw
                codec_type: AUTO
                route_config:
                  name: local_route_grpc
                  virtual_hosts:
                    - name: chaty_backend
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: chaty_grpc_server
                            timeout: 0s
                          typed_per_filter_config:
                            envoy.filters.http.cors:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.CorsPolicy
                              allow_origin_string_match:
                                - exact: "http://localhost:3000"
                              allow_methods: "POST,GET,DELETE,PUT,OPTIONS"
                              allow_headers: "Content-Type,Authorization,Cookie"
                              expose_headers: "X-Request-ID"
                              max_age: "3600s"
                              allow_credentials: false
                http_filters:
                  - name: envoy.filters.http.cors
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.wasm
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                      config:
                        name: "my_plugin"
                        root_id: "my_root_id"
                        vm_config:
                          vm_id: "my_vm_id"
                          code:
                            local:
                              filename: "/etc/envoy/wasm/chaty_envoy_filter.wasm"
                  - name: envoy.filters.http.jwt_authn
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                      providers:
                        hydra_jwt:
                          issuer: "http://localhost:4444/"
                          audiences: ["chaty"]
                          remote_jwks:
                            http_uri:
                              uri: http://hydra:4444/.well-known/jwks.json
                              cluster: hydra_public
                              timeout: 1s
                            cache_duration:
                              seconds: 300
                          forward: true
                          payload_in_metadata: "jwt_payload"
                          forward_payload_header: "x-jwt-payload"
                          claim_to_headers:
                            - header_name: "x-jwt-sub"
                              claim_name: "sub"
                            - header_name: "x-jwt-iss"
                              claim_name: "iss"
                            - header_name: "x-jwt-aud"
                              claim_name: "aud"
                            - header_name: "x-jwt-exp"
                              claim_name: "exp"
                            - header_name: "x-jwt-nbf"
                              claim_name: "nbf"
                            - header_name: "x-jwt-iat"
                              claim_name: "iat"
                            - header_name: "x-jwt-jti"
                              claim_name: "jti"
                      rules:
                        - match:
                            prefix: "/"
                          requires:
                            requires_any:
                              requirements:
                                - provider_name: hydra_jwt
                                - allow_missing: {}
                  - name: envoy.filters.http.ext_authz
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      transport_api_version: V3
                      grpc_service:
                        envoy_grpc:
                          cluster_name: auth_gateway
                        timeout: 0.5s
                      failure_mode_allow: false
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog

    - name: listener_chaty_grpc_web
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8092
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: chaty_grpc_web
                codec_type: AUTO
                route_config:
                  name: local_route_grpc_web
                  virtual_hosts:
                    - name: chaty_backend_web
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: chaty_grpc_server
                            timeout: 0s
                          typed_per_filter_config:
                            envoy.filters.http.cors:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.CorsPolicy
                              allow_origin_string_match:
                                - exact: "http://localhost:3000"
                                - exact: "http://localhost:3001"
                              allow_methods: "GET,POST,DELETE,PUT,OPTIONS"
                              allow_headers: "Content-Type,Authorization,Cookie,Origin,connect-protocol-version,x-request-id,x-ip-address,x-timezone,accept-language,user-agent,x-grpc-web,connect-timeout-ms"
                              expose_headers: "X-Request-ID,Grpc-Status,Grpc-Message"
                              max_age: "3600s"
                              allow_credentials: true
                http_filters:
                  - name: envoy.filters.http.cors
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.wasm
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                      config:
                        name: "my_plugin"
                        root_id: "my_root_id"
                        vm_config:
                          vm_id: "my_vm_id"
                          code:
                            local:
                              filename: "/etc/envoy/wasm/chaty_envoy_filter.wasm"
                  - name: envoy.filters.http.jwt_authn
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                      providers:
                        hydra_jwt:
                          issuer: "http://localhost:4444/"
                          audiences: ["chaty"]
                          remote_jwks:
                            http_uri:
                              uri: http://hydra:4444/.well-known/jwks.json
                              cluster: hydra_public
                              timeout: 3s
                            cache_duration:
                              seconds: 300
                          forward: true
                          payload_in_metadata: "jwt_payload"
                          forward_payload_header: "x-jwt-payload"
                          claim_to_headers:
                            - header_name: "x-jwt-sub"
                              claim_name: "sub"
                            - header_name: "x-jwt-iss"
                              claim_name: "iss"
                            - header_name: "x-jwt-aud"
                              claim_name: "aud"
                            - header_name: "x-jwt-exp"
                              claim_name: "exp"
                            - header_name: "x-jwt-nbf"
                              claim_name: "nbf"
                            - header_name: "x-jwt-iat"
                              claim_name: "iat"
                            - header_name: "x-jwt-jti"
                              claim_name: "jti"
                      rules:
                        - match:
                            prefix: "/"
                          requires:
                            requires_any:
                              requirements:
                                - provider_name: hydra_jwt
                                - allow_missing: {}
                  - name: envoy.filters.http.ext_authz
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      transport_api_version: V3
                      grpc_service:
                        envoy_grpc:
                          cluster_name: auth_gateway
                        timeout: 0.5s
                      failure_mode_allow: false
                  - name: envoy.filters.http.buffer
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.buffer.v3.Buffer
                      max_request_bytes: 10485760
                  - name: envoy.filters.http.connect_grpc_bridge
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.connect_grpc_bridge.v3.FilterConfig
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                      upstream_log:
                        - name: envoy.access_loggers.file
                          typed_config:
                            "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                            path: "/dev/stdout"
                            format: "[%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% \"%DOWNSTREAM_REMOTE_ADDRESS%\"\n"
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog

  clusters:
    - name: chaty_grpc_server
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {}
      load_assignment:
        cluster_name: chaty_grpc_server
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: host.docker.internal
                      port_value: 50050

    - name: auth_gateway
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {}
      load_assignment:
        cluster_name: auth_gateway
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: host.docker.internal
                      port_value: 50051

    - name: hydra_public
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: hydra_public
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: hydra
                      port_value: 4444

admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9905
